@@ -3,6 +3,28 @@
 DIRNAME=`dirname "$0"`
 PROGNAME=`basename "$0"`
 GREP="grep"
+SERVER_OPTS=""
+
+# Parsing incoming parameters
+while [ "$#" -gt 0 ]
+do
+    case "$1" in
+      -secmgr)
+          SECMGR="true"
+          ;;
+      -Djava.security.manager)
+          echo "ERROR: The use of -Djava.security.manager has been removed. Please use the -secmgr command line argument or SECMGR=true environment variable."
+          exit 1
+          ;;
+      --)
+          shift
+          break;;
+      *)
+          SERVER_OPTS="$SERVER_OPTS '$1'"
+          ;;
+    esac
+    shift
+done
 
 # Use the maximum available, or set MAX_FD != -1 to use that
 MAX_FD="maximum"
@@ -109,6 +131,19 @@ if $cygwin; then
     JBOSS_MODULEPATH=`cygpath --path --windows "$JBOSS_MODULEPATH"`
 fi
 
+# Process the JAVA_OPTS failing if the java.security.manager is set.
+SECURITY_MANAGER_SET=`echo $JAVA_OPTS | $GREP "java\.security\.manager"`
+if [ "x$SECURITY_MANAGER_SET" != "x" ]; then
+    echo "ERROR: The use of -Djava.security.manager has been removed. Please use the -secmgr command line argument or SECMGR=true environment variable."
+    exit 1
+fi
+
+# Set up the module arguments
+MODULE_OPTS=""
+if [ "$SECMGR" = "true" ]; then
+    MODULE_OPTS="-secmgr";
+fi
+
 CLASSPATH="$CLASSPATH:\""$JBOSS_HOME"\"/jboss-modules.jar"
 # Execute the JVM in the foreground
 eval \"$JAVA\" $JAVA_OPTS \
@@ -116,10 +151,11 @@ eval \"$JAVA\" $JAVA_OPTS \
  \"-Dorg.jboss.boot.log.file="$JBOSS_HOME"/appclient/log/appclient.log\" \
  \"-Dlogging.configuration=file:"$JBOSS_HOME"/appclient/configuration/logging.properties\" \
  org.jboss.modules.Main \
+ $MODULE_OPTS \
  -mp \""${JBOSS_MODULEPATH}"\" \
  org.jboss.as.appclient \
  -Djboss.home.dir=\""$JBOSS_HOME"\" \
  -Djboss.server.base.dir=\""$JBOSS_HOME"/appclient\" \
- '"$@"'
+ "$SERVER_OPTS"
 JBOSS_STATUS=$?
 exit $JBOSS_STATUS
